# _Framework

./: Notes.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app - Copy/: main.py
backend/app - Copy/api/endpoints/: stand_endpoint.py
backend/app - Copy/core/: config.py
backend/app - Copy/domain/: stand_domain.py
backend/app - Copy/infrastructure/: database.py
backend/app - Copy/infrastructure/adapters/: stand_adapter.py
backend/app - Copy/infrastructure/repositories/: stand_repository.py
backend/app/api/endpoints/: stand_endpoint.py
backend/app/domain/: stand_domain.py
backend/app/infrastructure/: database.py
backend/app/infrastructure/adapters/: stand_adapter.py
backend/app/infrastructure/orm_models/: stand_model.py
backend/app/infrastructure/repositories/: stand_repository.py
backend/app/schemas/: stand_schema.py
backend/tests/: test_stand_endpoint.py
